# python-REST-App-fullstack

./: README.md  alembic.ini  app.py  pyproject.toml
api/: endpoints.py
database/: connection_db.py
migrations/: env.py
migrations/versions/: 28b5ee1a6f28_.py  4a853832d508_fixed_relationship.py  570fc7e79d49_added_cascade_delete_on_relationship.py  63fe0f7eb4d8_add_user_name_and_overtime_to_userhour.py  a0db31e39b91_changed_from_datetime_to_date.py  c229c006a212_.py  d44036a963b1_.py  eabba83beffa_add_user_name_and_overtime_to_userhour.py  f1fc8cadab79_fixed_relationship.py  f8d3ac239365_added_new_field_for_user.py  f9bc497cba95_changed_models.py
models/: models.py
repository/: repository.py
schemas/: schemas.py
utils/: exceptions.py
